--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,8 @@
 <h1>Condomínio App</h1>
 <p>Sistema para Gerenciamento de Condomínios</p>
+<% if admin_signed_in? %>
+  <%= link_to 'Sair', destroy_admin_session_path, method: :delete %>
+<% else %>
+  <%= link_to 'Entrar', new_admin_session_path %>
+<% end %>
+
