--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CondominioApp</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <title>
+      <%= full_title(yield(:head_title)) %>
+    </title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -9,9 +12,16 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
+  <body id="<%= controller_name %>-<%= action_name %>">
+    <div class="page">
+      <div class="page-main">
+        <div class="container">
+          <%= render 'shared/flash_messages' %>
+
+          <%= yield %>
+
+        </div> <!-- .container -->
+      </div>
+    </div>
   </body>
 </html>
