--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,6 +1,6 @@
-<% provide(:head_title, 'Alterar minha senha') %>
-<% provide(:page_title, 'Alterar minha senha') %>
-<% provide(:title, 'Alterar sua senha') %>
+<% provide(:head_title, t('devise.passwords.edit.change_your_password')) %>
+<% provide(:page_title, t('devise.passwords.edit.change_your_password')) %>
+<% provide(:title, t('devise.passwords.edit.change_your_password')) %>
 
 <%= simple_form_for(resource,
                     as: resource_name,
@@ -13,20 +13,20 @@
 
   <div class="form-inputs">
     <%= f.input :password,
-                label: 'Nova senha',
+                label: t('devise.passwords.edit.new_password'),
                 required: true,
                 autofocus: true,
-                hint: 'Mínimo de 6 caracteres',
+                hint: (t('devise.shared.minimum_password_length', count: @minimum_password_length) if @minimum_password_length),
                 input_html: { autocomplete: "new-password" } %>
 
     <%= f.input :password_confirmation,
-      label: 'Confirmação da senha',
+      label: t('devise.passwords.edit.confirm_new_password'),
       required: true %>
   </div>
 
   <div class="form-actions">
     <%= f.button :submit,
-      'Alterar minha senha',
+      t('devise.passwords.edit.change_my_password'),
       class: 'btn btn-primary float-right mt-3' %>
   </div>
 <% end %>
