--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
-<% provide(:head_title, 'Editar perfil') %>
-<% provide(:page_title, 'Editar perfil') %>
-<% provide(:title, 'Editar perfil') %>
+<% provide(:head_title, t('sessions.edit_profile')) %>
+<% provide(:page_title, t('sessions.edit_profile')) %>
+<% provide(:title, t('sessions.edit_profile')) %>
 
 <%= simple_form_for(resource, as: resource_name,
                     url: admin_registration_path,
@@ -10,14 +10,15 @@
 
   <%= f.input :name, required: true, autofocus: true %>
   <%= f.input :email, required: true %>
-  <%= f.input :password %>
+  <%= f.input :password,
+      hint: t("devise.registrations.edit.leave_blank_if_you_don_t_want_to_change_it") %>
   <%= f.input :password_confirmation %>
   <%= f.input :current_password,
-    hint: 'Precisamos da sua senha para realizar as alterações',
-    required: true %>
+      hint: t("devise.registrations.edit.current_password_to_confirm"),
+      required: true %>
 
   <div class="d-flex">
-    <%= link_to 'Voltar', :admins_root, class: 'btn btn-secondary' %>
+    <%= link_to t('helpers.back'), :admins_root, class: 'btn btn-secondary' %>
 
     <%= f.button :submit, class: 'btn-primary ml-auto' %>
   </div>
