--- a/app/views/admins/condominia/edit.html.erb
+++ b/app/views/admins/condominia/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:page_title, 'Editar Condomínio') %>
-
+<% provide(:page_title, t('activerecord.models.condominium.edit')) %>
+<% provide(:head_title, t('activerecord.models.condominium.edit')) %>
 
 <%= render 'form' %>
