add pagina inicial, javascrips, css e novas paginas

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,15 +9,19 @@
 * Vendors stylesheets
 **************************************************************/
 
-
 /*************************************************************
 * Configurations
 **************************************************************/
+@import "config/tabler";
+@import "config/creative";
 
 
 /*************************************************************
 * Customizations
 **************************************************************/
+@import "customizations/simple_form_bootstrap";
+@import "customizations/creative_costumizations";
+
 
 
 /*************************************************************
