add imagens e mudanças na home

--- a/app/assets/stylesheets/customizations/creative_costumizations.scss
+++ b/app/assets/stylesheets/customizations/creative_costumizations.scss
@@ -1,9 +1,9 @@
-$main-bg-color: 		rgb(128, 0, 255);
+$main-bg-color: 		rgb(0,0,205);
 
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 56px);
-  background-image: asset-url("alunosapae.jpg");
+  background-image: asset-url("lagoagp.jpg");
   background-position: center center;
   background-size: cover;
 }
