--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12 col-lg-auto mt-3 mt-lg-0 text-center">
-        Copyright © 2019 <a href=".">Moraes Company System</a>. Todos direitos reservados.
+        Copyright © 2019 <a href=".">Barbosa & Moraes Company System</a>. Todos direitos reservados.
       </div>
     </div>
   </div>
