--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-10 mx-auto">
         <h1 class="text-uppercase">
-          <strong>APAE GUARAPUAVA</strong>
+          <strong>CONDOMINIO OURO BRANCO</strong>
         </h1>
         <hr>
       </div>
