--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   <div class="container">
     <a class="navbar-brand js-scroll-trigger"  href="#page-top">
-      <i class="fas fa-hands text-primary mb-3 sr-icon-2"></i>  APAE GUARAPUAVA</a>
+      <i class="fas fa-hotel text-primary mb-3 sr-icon-2"></i> CONDOMINIO OURO BRANCO</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
