--- a/app/views/home/_social_networks.html.erb
+++ b/app/views/home/_social_networks.html.erb
@@ -32,9 +32,9 @@
             <button type="submit" class="btn btn-primary">ENVIAR</button>
           </div>
           <hr class="light">
-          <h3 class="card-title section-heading text-center">Endereço: R. Luís Ciscato, 75 - Santa Cruz,
+          <h3 class="card-title section-heading text-center">Endereço: R. Barão de Capanema, 70 - Santa Cruz,
             Guarapuava - PR, 85015-070 </h3>
-          <h3 class="card-title section-heading text-center">Telefone: (42) 3623-2544 </h3>
+          <h3 class="card-title section-heading text-center">Telefone: (42) XXXX -XXXX </h3>
         </form>
       </div>
 
@@ -42,7 +42,7 @@
         <div class="col-lg-12">
           <h4 class="section-heading">Acompanhe ou compartilhe no Facebook!</h4>
 
-          <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fapae.deguarapuava%2F&tabs=timeline&width=340&height=480&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+          <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fpages%2FCondom%25C3%25ADnio-Residencial-Ouro-branco%2F315136979145279&tabs=timeline&width=340&height=480&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
                   width="340" height="480"
                   style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media">
           </iframe>
